Included the API to get the system details

--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
   </head>
   <body>
     <h1>Welcome to Intecu App</h1>
+    <div id="test"></div>
+    <button>Click me</button>
+
+    <script>
+      const electron = require('electron')
+      const ipcRenderer = electron.ipcRenderer;
+ 
+    </script>
   </body>
 </html>
