Connected the front end to the backend

--- a/app/index.html
+++ b/app/index.html
@@ -9,12 +9,7 @@
   <body>
     <h1>Welcome to Intecu App</h1>
     <div id="test"></div>
-    <button>Click me</button>
 
-    <script>
-      const electron = require('electron')
-      const ipcRenderer = electron.ipcRenderer;
- 
-    </script>
+    <script src="js/render.js"></script>
   </body>
 </html>
