--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <title>INTECU Network Test</title>
     <!-- https://electronjs.org/docs/tutorial/security#csp-meta-tag -->
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+    <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
     <div class="nav">
