Setup for initial build

--- a/app/index.html
+++ b/app/index.html
@@ -52,103 +52,40 @@
       <div class="container">
           <div class="container1">
               <div class="container-title">
-                  <p>Network Test</p>
+                  <p>System Details</p>
               </div>
-              <div class="field">
-                  <p class="value">0.56MKHz</p>
-                  <p class="key">Processor Speed</p>
-              </div>
-
-              <div class="field">
-                  <p class="value">0.56MKHz</p>
-                  <p class="key">Processor Speed</p>
-              </div>
-              <div class="field">
-                  <p class="value">0.56MKHz</p>
-                  <p class="key">Processor Speed</p>
+              <div class="field" >
+                  <p class="value"id="model"></p>
+                  <p class="key">Model</p>
               </div>
 
-              <div class="field">
-                  <p class="value">0.56MKHz</p>
-                  <p class="key">Processor Speed</p>
+              <div class="field" >
+                  <p class="value" id="cpuName"></p>
+                  <p class="key">CPU Name</p>
               </div>
               <div class="field">
-                  <p class="value">0.56MKHz</p>
-                  <p class="key">Processor Speed</p>
-              </div>
-
-              <div class="field">
-                  <p class="value">0.56MKHz</p>
-                  <p class="key">Processor Speed</p>
-              </div>
-              <div class="field">
-                  <p class="value">0.56MKHz</p>
-                  <p class="key">Processor Speed</p>
-              </div>
-
-              <div class="field">
-                  <p class="value">0.56MKHz</p>
-                  <p class="key">Processoffhfghsfgr Speed</p>
-              </div>
-              <div class="field">
-                  <p class="value">0.56MKHz</p>
-                  <p class="key">Processor Speed</p>
-              </div>
-
-              <div class="field">
-                  <p class="value">0.56MKHz</p>
-                  <p class="key">Processor Speed</p>
+                  <p class="value" id="cpuSpeed"></p>
+                  <p class="key">CPU Speed</p>
               </div>
           </div>
           <div class="container2">
               <div class="container-title">
-                  <p>System Details</p>
+                  <p>Network Details</p>
               </div>
-              <div class="field">
-                  <p class="value">0.56MKHz</p>
-                  <p class="key">Processor Speed</p>
-              </div>
-
-              <div class="field">
-                  <p class="value">0.56MKHz</p>
-                  <p class="key">Processor Speed</p>
-              </div>
-              <div class="field">
-                  <p class="value">0.56MKHz</p>
-                  <p class="key">Processor Speed</p>
+              <div class="field" >
+                  <p class="value" id="ipAddress"></p>
+                  <p class="key" >IP Address</p>
               </div>
 
               <div class="field">
-                  <p class="value">0.56MKHz</p>
-                  <p class="key">Processor Speed</p>
+                  <p class="value" id="gateway"></p>
+                  <p class="key" >Gateway</p>
               </div>
-              <div class="field">
-                  <p class="value">0.56MKHz</p>
-                  <p class="key">Processor Speed</p>
-              </div>
-
-              <div class="field">
-                  <p class="value">0.56MKHz</p>
-                  <p class="key">Processor Speed</p>
-              </div>
-              <div class="field">
-                  <p class="value">0.56MKHz</p>
-                  <p class="key">Processor Speed</p>
+              <div class="field" id="speed">
+                  <p class="value">=</p>
+                  <p class="key">Speed</p>
               </div>
 
-              <div class="field">
-                  <p class="value">0.56MKHz</p>
-                  <p class="key">Processoffhfghsfgr Speed</p>
-              </div>
-              <div class="field">
-                  <p class="value">0.56MKHz</p>
-                  <p class="key">Processor Speed</p>
-              </div>
-
-              <div class="field">
-                  <p class="value">0.56MKHz</p>
-                  <p class="key">Processor Speed</p>
-              </div>
           </div>
       </div>
       <div class="footer">
