--- a/app/index.html
+++ b/app/index.html
@@ -8,45 +8,12 @@
     <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
-    <div class="nav">
-      <ul>
-          <div class="nav-left">
-              <li>
-                  <a href="#">
-
-                  </a>
-              </li>
-              <li>
-                  <a href="#">
-                      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <path d="M17.645 6.35C16.195 4.9 14.205 4 11.995 4C7.575 4 4.005 7.58 4.005 12C4.005 16.42 7.575 20 11.995 20C15.725 20 18.835 17.45 19.725 14H17.645C16.825 16.33 14.605 18 11.995 18C8.685 18 5.995 15.31 5.995 12C5.995 8.69 8.685 6 11.995 6C13.655 6 15.135 6.69 16.215 7.78L12.995 11H19.995V4L17.645 6.35Z" fill="white" fill-opacity="0.54"/>
-                      </svg>                            
-                  </a>
-              </li>
-          </div>
-          <div class="nav-right">
-              <li>
-                  <a href="#">
-                      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <path d="M6 11H18V13H6V11Z" fill="white" fill-opacity="0.54"/>
-                      </svg>                            
-                  </a>
-              </li>
-              <li>                       
-                  <a href="#" id="quit">
-                      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <path fill-rule="evenodd" clip-rule="evenodd" d="M11 3H13V13H11V3ZM16.41 6.59003L17.83 5.17001C19.77 6.82001 21 9.26001 21 12C21 16.97 16.97 21 12 21C7.03003 21 3 16.97 3 12C3 9.26001 4.22998 6.82001 6.17004 5.17001L7.57996 6.58002C6.01001 7.86002 5 9.81003 5 12C5 15.87 8.13 19 12 19C15.87 19 19 15.87 19 12C19 9.81003 17.99 7.86002 16.41 6.59003Z" fill="white" fill-opacity="0.54"/>
-                      </svg>
-                  </a>
-              </li>
-          </ul>
-      </ul>
-  </div>
   <div class="main">
-      <div class="header">
-          <img src="./images/oaulogosmaller.png">
-      </div>
+      
       <div class="progress">
+        <div class="header">
+            <img src="./images/oaulogosmaller.png">
+        </div>
           <p>INTECU, OAU</p>
       </div>
       <div class="container">
@@ -55,13 +22,36 @@
                   <p>System Details</p>
               </div>
               <div class="field" >
-                  <p class="value"id="model"></p>
-                  <p class="key">Model</p>
+                <p class="value"id="host"></p>
+                <p class="key">Host Name</p>
               </div>
-
               <div class="field" >
-                  <p class="value" id="cpuName"></p>
-                  <p class="key">CPU Name</p>
+                  <p class="value"id="systemManufacturer"></p>
+                  <p class="key">System Manufacturer</p>
+              </div>
+              <div class="field" >
+                <p class="value"id="OS"></p>
+                <p class="key">Operating System</p>
+              </div>
+              <div class="field" >
+                <p class="value"id="OSName"></p>
+                <p class="key">Operating System Name</p>
+              </div>
+              <div class="field">
+                <p class="value"id="OSType"></p>
+                <p class="key">Operating System Type</p>
+              </div>
+              <div class="field">
+                <p class="value"id="RAM"></p>
+                <p class="key">System RAM</p>
+              </div>
+              <div class="field" >
+                <p class="value"id="cpuManufacturer"></p>
+                <p class="key">CPU Manufacturer</p>
+              </div>
+              <div class="field" >
+                  <p class="value" id="cpuBrand"></p>
+                  <p class="key">CPU Brand</p>
               </div>
               <div class="field">
                   <p class="value" id="cpuSpeed"></p>
@@ -81,16 +71,33 @@
                   <p class="value" id="gateway"></p>
                   <p class="key" >Gateway</p>
               </div>
-              <div class="field" id="speed">
-                  <p class="value">=</p>
+              <div class="field">
+                  <p class="value" id="speed"></p>
                   <p class="key">Speed</p>
               </div>
+              <div class="field">
+                <p class="value" id="latency"></p>
+                <p class="key">Network Latency</p>
+              </div>
+              <div class="field">
+                <p class="value" id="connectionInterface"></p>
+                <p class="key">Connection Interface</p>
+              </div>
+              <div class="field">
+                <p class="value" id="message"></p>
+                <p class="key">Message</p>
+              </div>
+              <div class="field">
+                <p class="value" id="ping"></p>
+                <p class="key">Ping Result</p>
+              </div>
+
 
           </div>
       </div>
       <div class="footer">
-          <button>Login</button>
-          <button>Continue to Browse</button>
+          <button id="login">Login</button>
+          <button id="continual">Continue to Browse</button>
       </div>
   </div>
 
