Rendered Download and Browsing speed...

--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,7 @@
             <p class="key">Upload Speed</p>
         </div>
       </div>
+      <p id="err"></p>
 
       <div class="container">
           <div class="container1">
